--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ body {
 }
 
 .hero__grid-image {
-    max-width: 390px;
-    height: 630px;
+    max-width: 387px;
+    height: 620px;
     object-fit: cover;
     border-radius: 16px;
 }
@@ -88,12 +88,12 @@ body {
     width: 100%;
     height: 800px;
     object-fit: cover;
-    border-radius: 16px;
+    border-radius: 24px;
 }
 
 .content__text {
     background-color: #F4F0EA;
-    border-radius: 16px;
+    border-radius: 24px;
     padding: 40px 0;
     height: 800px;
 }
@@ -111,15 +111,15 @@ body {
     font-weight: 400;
     font-family: 'Lora', serif;
     color: #000000;
-    margin-bottom: 36px;
+    margin-bottom: 24px;
 }
 
 .content__title-first {
-    padding-top: 294px;
+    padding-top: 252px;
 }
 
 .content__title-second {
-    padding-top: 372px;
+    padding-top: 332px;
 }
 
 .content__subtitle {
@@ -134,24 +134,13 @@ body {
 .content__description {
     font-size: 14px;
     line-height: 22px;
-    color: #666666;
-    font-weight: normal;
-    margin-bottom: 12px;
+    font-weight: 400;
+    color: #000000;
+    margin-bottom: 24px;
 }
 
 /* Responsive */
 @media (max-width: 1024px) {
-    .content__body {
-        width: auto;
-        padding: 0 30px;
-    }
-    
-    .hero__grid-image {
-        max-width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
     .main {
         padding: 1rem;
     }
@@ -162,17 +151,17 @@ body {
     }
 
     .hero__grid {
-        grid-template-columns: 1fr;
-        gap: 12px;
+        grid-template-columns: 1fr 1fr;
+        gap: 4px;
     }
 
     .hero__grid-image {
         height: 400px;
-        margin: 0 auto;
+        width: 100%;
     }
 
     .content {
-        margin: 40px 16px;
+        margin: 60px 0;
     }
 
     .content__block {
@@ -237,7 +226,7 @@ body {
     }
 
     .content {
-        margin: 80px 0;
+        margin: 40px 0;
     }
 
     .content__title {
